refactor: improve attachments metadata naming